# rag-gen-ai

./: .env.example  README.md  main.py  pyproject.toml
data/: dataset.txt
src/: __init__.py  embedding.py  orchestrator.py  retrieval.py  sample.ipynb  storage.py  web_server.py
src/static/: index.html
tests/: test_pipeline.py
