[project]
name = "genai-rag-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
